# comfyui_extractstoryboards

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
example/: example-extract.json  v2v-extract.json
src/extractstoryboards/: nodes.py
tests/: __init__.py  test_extractstoryboards.py
web/js/: example.js
